# mediterranean_wanderer

./: .gitignore  LICENSE  README.md  context.md  directory_structure.xml  pyproject.toml
docs/: game-design.md  technical_report.md
src/island_rl/: __init__.py  __main__.py  engine.py  interaction.py  inventory.py  items.py  locations.py  message_log.py  player.py  time_system.py  weather_system.py  world.py
tests/: test_biomes.py  test_engine.py  test_interaction.py  test_inventory.py  test_items.py  test_locations.py  test_main.py  test_message_log.py  test_player.py  test_time_system.py  test_weather_system.py  test_world.py
